# sustainability_rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md
result/: ch_evaluate_conclusion.txt  ch_sustainability_evaluate.txt  en_evaluate_conclusion.txt  en_sustainability_evaluate.txt  method_1_final_conclusion.txt  method_2_final_conclusion.txt
sustainability_rag/: .env  data2qdrant.py  main_method1.py  main_method2.py  parse_conclusion.py  parse_pdf.py  search.py
